<resources>
    <string name="app_name">Tips App</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_25">Amazing (25%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">CALCULATE</string>

    <string name="tip_result">Tip Amount: %s</string>
    <string name="amazing_20">Amazing (20%)</string>
</resources>